- Added implementation of ChartJs to simple calculator page
- refactored MortgageCalculator by simplifying duplicate data
- Adjusted colour scheme of basic calculator page

--- a/MortgageCalculatorWebApp/Pages/Shared/_Layout.cshtml
+++ b/MortgageCalculatorWebApp/Pages/Shared/_Layout.cshtml
@@ -1,51 +1,47 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MortgageCalculatorWebApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MortgageCalculatorWebApp.styles.css" asp-append-version="true" />
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Dave's Mortgage Calculator</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BasicCalculator">Calculator</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+﻿<!doctype html>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="~/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/bootstrap.rtl.min.css" rel="stylesheet">
+    
+    <!-- Custom styles for this template -->
+    <link href="~/css/base.css" rel="stylesheet">
+
+  </head>
+  <body class="d-flex h-100 text-center text-bg-dark">
+    
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">Dave's Mortgage Calculator</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+        <a class="nav-link fw-bold py-1 px-0" href="#">Basic Calculator</a>
+        <a class="nav-link fw-bold py-1 px-0" href="#">Advanced Calculator</a>
+      </nav>
     </div>
+  </header>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - Mortgage Calculator
-        </div>
-    </footer>
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
 
+  <footer class="mt-auto text-white-50">
+            <p>Mortgage Calculator 2023 - Source code available on GitHub</p>
+  </footer>
+</div>
+    
+  </body>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <!-- Used displaying charts using ChartJS -->
+<link rel="stylesheet" href="~/lib/chartjs/Chart.css" />
+<script src="~/lib/chartjs/Chart.min.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
-</body>
 </html>
