--- a/MortgageCalculatorWebApp/Pages/BasicCalculator.cshtml
+++ b/MortgageCalculatorWebApp/Pages/BasicCalculator.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @using System.Globalization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MortgageCalculator.SharedLogic.Helpers;
 @model BasicCalculatorModel
 @{
     ViewData["Title"] = "Mortgage Calculator";
@@ -20,7 +21,7 @@
                 <div class="input-group-prepend">
                     <div class="input-group-text">£</div>
                 </div>
-                <input type="number" class="form-control" id="mortgageAmountInput" min="1" asp-for="Calculator.MortgageAmount">
+                <input type="number" class="form-control" id="mortgageAmountInput" min="1" max="25000000" asp-for="Calculator.MortgageAmount">
             </div>
         </div>
         <div class="row">
@@ -36,7 +37,7 @@
             <div class="col">
                 <label class="sr-only" for="interestRateInput">Term</label>
                 <div class="input-group mb-2">
-                    <div class="input-group-postpend">
+                    <div class="input-group-prepend">
                         <div class="input-group-text">Years</div>
                     </div>
                     <input type="number" class="form-control" id="termInput" min="1" max="40" asp-for="Calculator.Term">
@@ -53,42 +54,77 @@
 <!-- Displays tabbed UI with the users mortgage calculation results-->
 @if (!(Model.Calculator.ParametersAreNotSet()))
 {
-    <div class="row">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Repayment</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Interest only</button>
-            </li>
-        </ul>
 
+    <div class="row">
+        <!-- Tab selection for mortgage type selection -->
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Repayment</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Interest only</button>
+                </li>
+            </ul>
+         </div>
+        
+
+        <!-- Repayment Only Tab-->
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                 <row>
-                    <div class="card" style="*">
-                        <div class="card-body">
-                            <h6 class="card-subtitle mb-2 text-body-secondary">£@Model.Calculator.MonthlyRepayment per month</h6>
-                            <p class="card-text">Total mortgage cost: £@Model.Calculator.TotalCostOfMortgage</p>
-                            <p class="card-text">Final payment date: @Model.Calculator.PayOffDateTime.ToString(new CultureInfo("en-GB"))</p>
+                    <div class="my-3 p-3 bg-body rounded shadow-sm">
+                        <div class="card">
+                            <div class="card-body">
+                                <h6 class="card-subtitle mb-2 text-body-secondary">@Model.Calculator.MonthlyRepayment.ConvertDecimalToStandardFormat() per month</h6>
+                                <p class="card-text">Total paid: @Model.Calculator.Repayment.TotalCostOfMortgage.ConvertDecimalToStandardFormat()</p>
+                                <p class="card-text">Final payment: @Model.Calculator.Repayment.PayOffDateTime.RepaymentDateFormat()</p>
+                            </div>
                         </div>
                     </div>
                 </row>
-
+                <div class="row">
+                    <div class="chart-container" width="600" height="400">
+                        <canvas id="repaymentChart"></canvas>
+                    </div>
+                </div>
             </div>
+
+            <!-- Interest Only Tab-->
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                 <row>
                     <div class="card" style="*">
                         <div class="card-body">
-                            <h6 class="card-subtitle mb-2 text-body-secondary">£@Model.Calculator.InterestOnlyMonthlyRepayment per month</h6>
-                            <p class="card-text">Total mortgage cost: £@Model.Calculator.TotalCostOfMortgageInterestOnly</p>
-                            <p class="card-text">Final payment date: @Model.Calculator.PayOffDateTime.ToString(new CultureInfo("en-GB"))</p>
+                            <div class="container">
+                            </div>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">@Model.Calculator.InterestOnlyMonthlyRepayment.ConvertDecimalToStandardFormat() per month</h6>
+                            <p class="card-text">Total interest: @Model.Calculator.InterestOnly.TotalCostOfMortgage.ConvertDecimalToStandardFormat()</p>
+                            <p class="card-text">Final payment: @Model.Calculator.Repayment.PayOffDateTime.RepaymentDateFormat()</p>
                         </div>
                     </div>
                 </row>
+                <div class="row">
+                    <div class="chart-container" width="600" height="400">
+                        <canvas id="interestOnlyChart"></canvas>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+
+            var ctx = document.getElementById('repaymentChart');
+            var myChart = new Chart(ctx, @Html.Raw(Model.RepaymentChartJson));
+
+            var ctx = document.getElementById('interestOnlyChart');
+            var myChart = new Chart(ctx, @Html.Raw(Model.InterestOnlyChartJson));
+
+        });
+    </script>
+
 }
 
 
